# dice-roller

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: app.rs  lib.rs  main.rs
ui/: appwindow.slint  datatypes.slint  pages.slint  style.slint  widgets.slint
