[package]
name = "dice-roller"
version = "0.1.0"
edition = "2021"
links = "mcu_board_support" # just so we can pass metadata to the slint build crate

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
slint = { version = "1.8", default-features = false, features = [
    "compat-1-2",
    "renderer-software",
    "unsafe-single-threaded",
    "libm",
] }
i-slint-core-macros = { version = "1.8" }

# derive_more = { workspace = true }
# embedded-graphics = { version = "0.8", optional = true }
# once_cell = { version = "1.9", default-features = false, features = ["alloc"] }
# pin-weak = { version = "1", default-features = false }
# rgb = "0.8.27"
# cfg-if = "1"

# embedded-alloc = { version = "0.6", optional = true }
# cortex-m-rt = { version = "0.7", optional = true }
# cortex-m = { version = "0.7.2", optional = true }
display-interface = { version = "0.5.0" }
embedded-hal = { version = "1.0.0" }
# embedded-hal-nb = { version = "1.0.0", optional = true }
embedded-hal-bus = { version = "0.2" }
# embedded-dma = { version = "0.2.0", optional = true }
# rp-pico = { version = "0.9.0", optional = true }
# fugit = { version = "0.3.6", optional = true }
# euclid = { version = "0.22", default-features = false, optional = true }

# stm32h7xx-hal = { version = "0.16.0", optional = true, features = [
#     "log-rtt",
#     "ltdc",
#     "xspi",
# ] }
# getrandom = { version = "0.2", optional = true, default-features = false, features = [
#     "custom",
# ] }
# embedded-time = { version = "0.12.0", optional = true }
# embedded-display-controller = { version = "0.2.0", optional = true }
# ft5336 = { version = "0.2", optional = true }

esp-hal = { version = "0.21", features = ["esp32s3"] }
display-interface-spi = { version = "0.5" }
esp-alloc = { version = "0.5" }
esp-println = { version = "0.12.0", features = ["esp32s3"] }
esp-backtrace = { version = "0.14.0", features = [
    "panic-handler",
    "println",
    "esp32s3",
] }
tt21100 = { version = "0.1" }

mipidsi = { version = "0.8.0" }
embedded-graphics-core = { version = "0.4" }

# defmt-rtt = { version = "0.4.0", optional = true }
# defmt = { version = "0.3.0", optional = true }
# panic-probe = { version = "0.3.0", optional = true, features = ["print-defmt"] }

rand = { version = "0.8", features = [] }

strum = { version = "0.26", features = [] }

[build-dependencies]
# embuild = { version = "0.32", features = ["espidf"] }
slint-build = { version = "1.8" }
